[project]
name = "pyjwt-rsa"
version = "1.2.0"
description = "RSA helpers for PyJWT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyjwt>=2.10,<3",
    "cryptography>=37.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: Russian",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Typing :: Typed",
]
license = { file = "LICENCE" }

[project.scripts]
jwt-rsa = "jwt_rsa.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jwt_rsa"
module-root = ""

[dependency-groups]
dev = [
    "mypy>=1.17",
    "pytest>=8.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E701",  # multiple statements on one line
]

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
log_cli = true
addopts = "--cov jwt_rsa --cov-report term-missing --doctest-modules"
